--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <p>Mi primer repo</p>
     <p>es mi otro parrafo</p>
+    <div>
+        <p>caja de elementos</p>
+    </div>
 </body>
 </html>
