--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>es mi otro parrafo</p>
     <div>
         <p>caja de elementos</p>
+        <p>cuadro 1</p>
+        <p>cuadro 2</p>
     </div>
 </body>
 </html>
