agregue los marcos para ubicar las imagenes

--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <p>Mi primer repo</p>
-    <p>es mi otro parrafo</p>
-    <div>
-        <p>caja de elementos</p>
-        <p>cuadro 1</p>
-        <p>cuadro 2</p>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class ="center">
+      <p>imagen 1</p>
+      <p>imagen 2</p>
+      <p>imagen 3</p>
+      <p>imagen 4</p>
     </div>
-</body>
+    <div class ="center">
+      <p>imagen 5</p>
+      <p>imagen 6</p>
+      <p>imagen 7</p>
+      <p>imagen 8</p>
+    </div>
+    <div class ="center">
+        <p>imagen 9</p>
+        <p>imagen 10</p>
+        <p>imagen 11</p>
+        <p>imagen 12</p>
+      </div>
+  </body>
 </html>
