mostrar imagenes en la pagina web

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   </head>
   <body>
     <div class ="center">
-      <p>imagen 1</p>
-      <p>imagen 2</p>
-      <p>imagen 3</p>
-      <p>imagen 4</p>
+      <p>imagen 1 <img src="./images/imagen1.png" alt="imagenPc"></p>
+      <p>imagen 2 <img src="./images/imagen2.png" alt=""></p>
+      <p>imagen 3 <img src="./images/imagen3.png" alt=""></p>
+      <p>imagen 4 <img src="./images/imagen4.png" alt=""></p>
     </div>
     <div class ="center">
-      <p>imagen 5</p>
-      <p>imagen 6</p>
-      <p>imagen 7</p>
-      <p>imagen 8</p>
+      <p>imagen 5 <img src="./images/imagen5.png" alt=""></p>
+      <p>imagen 6 <img src="./images/imagen6.png" alt=""></p>
+      <p>imagen 7 <img src="./images/imagen7.webp" alt=""></p>
+      <p>imagen 8 <img src="./images/imagen8.jpg" alt=""></p>
     </div>
     <div class ="center">
-        <p>imagen 9</p>
-        <p>imagen 10</p>
-        <p>imagen 11</p>
-        <p>imagen 12</p>
+        <p>imagen 9 <img src="./images/imagen9.png" alt=""></p>
+        <p>imagen 10<img src="./images/imagen10.png" alt=""></p>
+        <p>imagen 11<img src="./images/imagen11.jpg" alt=""></p>
+        <p>imagen 12<img src="./images/imagen12.webp" alt=""></p>
       </div>
   </body>
 </html>
